<resources>
    <string name="app_name">Second</string>
    <string name="btn_login">Login</string>
    <string name="logo">IBM</string>
    <string name="btn_label">button</string>
    <string name="hello_android">Hello Android</string>
    <string name="points3_label">+3 points</string>
    <string name="points2_label">+2 points</string>
    <string name="points1_label">+1 point</string>
    <string name="point3_label">+3 points</string>
    <string name="point2_label">+2 points</string>
    <string name="point1_label">+1 point</string>
    <string name="teama_label">TeamA</string>
    <string name="teamab_label">TeamB</string>
    <string name="hello1">Hello</string>
    <string name="reset_label">reset</string>

    <string name="rmb"></string>
    <string name="dollar">DOLLAR</string>
    <string name="eudo">EURO</string>
    <string name="won">WON</string>
    <string name="btn_open_label">Open Activity</string>
    <string name="menu_setting">setting</string>
    <string name="loading">menu_loading</string>
    <string name="menu_loading">loading</string>
    <string name="rmb_hint_label">input RMB</string>


</resources>