<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">
 <EditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/rmb"
     android:id="@+id/input_rmb"
     android:gravity="center"
     android:hint="Input RMB"
     android:textSize="50sp"
     android:layout_marginTop="16dp"
     />
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/result"
     android:text="@string/hello1"
     android:gravity="center"
     android:textSize="50sp"
     android:layout_marginTop="16dp"
     />

 <Button
     android:id="@+id/btn_dollar"
     android:layout_width="394dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="12dp"
     android:onClick="click"
     android:text="@string/dollar" />
 <Button
    android:id="@+id/btn_euro"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/eudo"
    android:layout_marginTop="12dp"
    android:onClick="click"/>
 <Button
    android:id="@+id/btn_won"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/won"
    android:layout_marginTop="12dp"
    android:onClick="click"/>

 <Button
     android:id="@+id/btn_open"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="CONFIG"
     android:layout_marginTop="12dp"
     android:onClick="openConfig"/>







</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>