<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BallActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teama_label"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginTop="16dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/score1"
                android:gravity="center"
                android:textSize="55sp"
                android:text="0"
                android:layout_marginTop="12dp"
                />
            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points3_label"
                android:layout_marginTop="12dp"
                android:onClick="click"/>
            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points2_label"
                android:layout_marginTop="12dp"
                android:onClick="click"/>
            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points1_label"
                android:layout_marginTop="12dp"
                android:onClick="click"/>
        </LinearLayout>

        <TextView
            android:layout_width="3dp"
            android:background="@color/black"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teamab_label"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginTop="16dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/score2"
                android:gravity="center"
                android:textSize="55sp"
                android:text="0"
                android:layout_marginTop="12dp"
                />
            <Button
                android:id="@+id/btnb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/point3_label"
                android:layout_marginTop="12dp"
                android:onClick="clickb"/>
            <Button
                android:id="@+id/btnb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/point2_label"
                android:layout_marginTop="12dp"
                android:onClick="clickb"/>
            <Button
                android:id="@+id/btnb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/point1_label"
                android:layout_marginTop="12dp"
                android:onClick="clickb"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:text="@string/reset_label"
        android:onClick="click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
